<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MAIN -->
    <string name="app_name">Delta Fountains</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="controls">Controls</string>
    <string name="functions">Functions</string>
    <string name="support">Support</string>

    <!-- CONTROLS -->
    <string name="title_activity_controls">Controls</string>
    <string name="x_field">X</string>
    <string name="y_field">Y</string>
    <string name="angle_field">Angle</string>
    <string name="dist_field">Distance</string>
    <string name="dir_field">Direction</string>
    
    <!-- FUNCTIONS -->
    <string name="title_activity_functions">Functions</string>
    
    <!-- SUPPORT -->
    <string name="title_activity_support">Support</string>
    <string name="help">Help</string>
    <string name="controls_help">Controls - Takes you to the manual control</string>
    <string name="functions_help">Functions - Takes you to fountain patterns</string>
    <string name="clw">CLW - Clockwise</string>
    <string name="cclw">CCLW - Counter Clockwise</string>
    <string name="ns">N/S - North to South</string>
    <string name="ew">E/W - East to West</string>
    

</resources>
